--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,35 @@
+*{
+	box-sizing:border-box;
+	/* font-family:arial; */
+}
 
-/* Your CSS Code here. */
+body{
+	background-color:aquamarine;
+	padding:10px;
+}
+nav{
+	background-color:lightgray;
+	padding:15px;
+	text-align:end;
+}
+
+a{
+	text-decoration:none;
+}
+
+h1{
+	text-align:center;
+	width:100%;
+	background-color:mediumaquamarine;
+	padding:10px;
+}
+
+aside{
+	float:right;
+	background-color:pink;
+	padding:10px;
+	margin-top:60px;
+	margin-bottom:10px;
+	border-radius:15px
+	
+}
